# useful

./: .gitignore  .update.fish.swp  CMakeLists.txt  CMakeLists.txt.user.4.9-pre1  CMakeLists.txt.user.5a9be21  main.cpp  std.hpp  test.cpp  useful.hpp  useful.pro
test/: all.hpp  csv.cpp  import.hpp  meta.cpp  meta.hpp  streams.cpp  streams.hpp  strings.cpp  strings.hpp  test.cpp  testing.hpp  utils.cpp  utils.hpp
useful/: all.hpp  base.hpp  basic_types.hpp  benchmark.hpp  conv_literals.hpp  csv.hpp  default_import.hpp  formats.hpp  import.hpp  in_overloads.hpp  input.hpp  meta.hpp  mm.hpp  out_overloads.hpp  output.hpp  proc_time.hpp  short_int.hpp  span.hpp  std_import.hpp  streams.hpp  strings.hpp  time_meter.hpp  traits.hpp  typeid.hpp  useful.hpp  utils.hpp
wh/: base.hpp  benchmark.hpp  import.hpp  meta.hpp  span.hpp  strings.hpp  typeid.hpp  utils.hpp
